add partition to team ranking + small refactoring