@@ -1,7 +1,15 @@
 package com.base.persistence.repository.impl;
 
-import static com.base.persistence.entities.generated.Tables.GROUP;
-import static com.base.persistence.entities.generated.Tables.TEAM;
+import com.base.persistence.entities.generated.tables.Group;
+import com.base.persistence.model.TeamData;
+import com.base.persistence.repository.TeamRepositoryCustom;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import lombok.val;
+import org.jooq.DSLContext;
+import org.jooq.Field;
+import org.jooq.Table;
+import org.jooq.impl.DSL;
 
 import javax.persistence.EntityManager;
 import javax.persistence.PersistenceContext;
@@ -10,19 +18,10 @@ import javax.persistence.Tuple;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
-import com.base.persistence.entities.generated.tables.Group;
-import com.base.persistence.repository.TeamRepositoryCustom;
-import com.base.persistence.model.TeamData;
-import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
-import lombok.val;
-import org.jooq.DSLContext;
-import org.jooq.Field;
-import org.jooq.Table;
-import org.jooq.impl.DSL;
+import static com.base.persistence.entities.generated.Tables.GROUP;
+import static com.base.persistence.entities.generated.Tables.TEAM;
 
 @Slf4j
 @RequiredArgsConstructor
@@ -32,12 +31,16 @@ public class TeamRepositoryCustomImpl implements TeamRepositoryCustom {
     @PersistenceContext
     private final EntityManager entityManager;
     private final DSLContext dslContext;
+    private static final String GROUP_NAME = "group_name";
+    private static final String RANKING = "ranking";
 
     @Override
     public List<TeamData> findAllTeamsInFirstPlace() {
-        Field<Object> ranking = DSL.field("ranking");
-        Field<Object> groupName = DSL.field("group_name");
+        Field<Object> ranking = DSL.field(RANKING);
+        Field<Object> groupName = DSL.field(GROUP_NAME);
         Table<?> subQueryAlias = DSL.table("nested");
+
+        //TODO: should remove ranking from the result. it is redundant
 
         var subQuery =
                 dslContext.select(
@@ -67,13 +70,13 @@ public class TeamRepositoryCustomImpl implements TeamRepositoryCustom {
         final Query query = entityManager.createNativeQuery(queryString, "TeamDataMapping");
         setBindParameterValues(query, jooqQuery);
 
-        return (List<TeamData>) query.getResultList();
+        return query.getResultList();
     }
 
     @Override
     public List<TeamData> findAllTeamsRanked() {
-        Field<Object> ranking = DSL.field("ranking");
-        Field<Object> groupName = DSL.field("group_name");
+        Field<Object> ranking = DSL.field(RANKING);
+        Field<Object> groupName = DSL.field(GROUP_NAME);
 
         var jooqQuery =
                 dslContext.select(
@@ -82,13 +85,13 @@ public class TeamRepositoryCustomImpl implements TeamRepositoryCustom {
                                 GROUP.NAME.as(groupName),
                                 DSL.rank()
                                         .over()
+                                        .partitionBy(GROUP.NAME)
                                         .orderBy(TEAM.POINTS.desc())
                                         .as(ranking)
                         )
                         .from(TEAM)
                         .join(GROUP)
-                        .on(TEAM.GROUP_ID.eq(Group.GROUP.ID))
-                        .orderBy(ranking.asc());
+                        .on(TEAM.GROUP_ID.eq(Group.GROUP.ID));
 
         final String queryString = jooqQuery.getSQL();
         log.info(queryString);
@@ -96,7 +99,7 @@ public class TeamRepositoryCustomImpl implements TeamRepositoryCustom {
         final Query query = entityManager.createNativeQuery(queryString, "TeamDataMapping");
         setBindParameterValues(query, jooqQuery);
 
-        return (List<TeamData>) query.getResultList();
+        return query.getResultList();
     }
 
     public List<TeamData> getAllTeamsFromGroup(
@@ -122,13 +125,13 @@ public class TeamRepositoryCustomImpl implements TeamRepositoryCustom {
                 field.get(1, String.class),
                 field.get(2, Integer.class),
                 null
-        )).collect(Collectors.toList());
+        )).toList();
     }
 
     private Set<Field<?>> getFieldList() {
 
         final Set<Field<?>> fieldList = new LinkedHashSet<>();
-        final Field<Object> groupName = DSL.field("group_name");
+        final Field<Object> groupName = DSL.field(GROUP_NAME);
 
         fieldList.add(GROUP.NAME.as(groupName));
         fieldList.add(TEAM.NAME);
